--- a/additionalResources/additionalResources.html
+++ b/additionalResources/additionalResources.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
         <div class="welcome-container">
-            <h1 class="resource-header">Here are some additional resources that will be helpful on your journey in learning python...</h1>
+            <h1 class="resource-header">Some additional resources might help..</h1>
             <img src="../Photos/books.png" alt="Photo of books" class="books-logo">
         </div>
     </div>
